 *   - ~ Dirlog rebuild update mode broken (-r -u) (2.3.10) 
 *   - ~ Do not retry opening nukelog if it fails the first time (-r) (2.3.11)
 *   - ~ Filtering options broken when no log existed (-r) (2.3.11)
 *   - ~ Sparseness ({sparse}) was not calculated properly (2.3.12)
 *   - ~ Certain stages of SFV rebuild ignoring --nowrite (2.3.12)
 *   - + SUID/SGID/sticky bit octet support (2.3.13)
 *
 * v2.2:
 *
 *   - % Automake
 *   - ~ -r and -w broken (since 2.2)
 *   - ~ LREF_ONLINE_H_ used in two different headers (rev. 3)
 *
 * v2.1:
 * 
 *   - + Arithmetic pre-processor (-print[f] only)
 *   - %! LOM argument processing more efficient (rev. 1) 
 *   - ~ Memleak: -print bytecode header memory not freed (rev. 2)
 *   - ~ Field values were not interpreted properly (arithmetic pre-processor) (rev. 3)
 *   - ~ ref_to_val_ptr_gen1 failing to match field name (rev. 4)
 *   - % Replaced strcmp with strncmp in ref_to_val_macro (rev. 5)
 *   - + Add GENERIC-4 log (rev. 6)
 *   - % --raw with -z dumps loaded data to stdout (rev. 7)
 *   - ~ Default match subject offset misaligned on GE4 (string matching) (rev. 8)
 *   - ! Optimize enum_dir (rev. 8)
 *   - ~! {crc32} calculated each time it was requested, instead of just once for a file (rev. 9)
 *   - % Hexadecimal numbers need to be given with 0x in front (LOM and arithmetic pre-processor) (rev. 9)
 *   - % #<format> works with arithmetics (extended directive '?m', see MANUAL) (rev. 9)
 *   - ~ Broke LOM and arithmetic pre-processor args float detection in rev. 9 (rev. 10)
 *   - ~ Properly align directives and data-type sizes on output (arith. preproc)  (rev. 10)
 *   - % Non-field numerals given to arithmetic pre-processor are forced to same type as first argument (rev. 11)
 *   - + Arithmetic pre-processor accepts bitwise operators (see MANUAL) (rev. 12)
 *   - %! Avoid copying and null-terminating strings where not needed (ref_to_val_af) (rev. 13)