@@ -30,6 +30,7 @@
  *   - ~ Sparseness ({sparse}) was not calculated properly (2.3.12)
  *   - ~ Certain stages of SFV rebuild ignoring --nowrite (2.3.12)
  *   - + SUID/SGID/sticky bit octet support (2.3.13)
+ *   - + Add 'pbits' (first 12 bits of st_mode) (2.3.13)
  *
  * v2.2:
  *
